syntax = "proto3";
package com.example.json;

// tag::service[]
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

message KeyValue {
  string key = 1;
  int32 value = 2;
}

service MyService {
  option (kalix.codegen) = {
    action: {}
  };

  rpc Consume(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      topic:  "notifications"
    };
  }

  rpc Produce(KeyValue) returns (google.protobuf.Any) { // <1>
    option (kalix.method).eventing.out = { // <2>
      topic:  "notifications" // <3>
    };
  }
  
}
// end::service[]
